name:                gold-bug
version:             0.1.0.0
synopsis:            Chording-keyboard demo based on relative letter frequencies.
description:         Chording-keyboard demo based on relative letter frequencies.

                     The Gold-Bug is a story by Edgar Allen Poe which has a puzzle in it
                     where letter frequencies are used to solve it.                     
homepage:            https://github.com/duncanguthrie/chording-kbd#readme
license:             BSD3
license-file:        LICENSE
author:              Duncan Guthrie
maintainer:          dguthrie@posteo.net
copyright:           Duncan Guthrie
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gold-bug
  hs-source-dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base            >= 4.7  && < 5
                   , microlens       >= 0.4  && < 0.5
                   , microlens-th    >= 0.4  && < 0.5
                   , QuickCheck      >= 2.13 && < 2.14
                   , reactive-banana >= 1.2  && < 1.3
                   , sdl2            >= 2.5  && < 2.6
                   , vector          >= 0.12 && < 0.13