name:                gold-bug
version:             0.1.0.0
synopsis:            Chording-keyboard demo based on relative letter frequencies.
description:         Chording-keyboard demo based on relative letter frequencies.

                     The Gold-Bug is a story by Edgar Allen Poe which has a puzzle in it
                     where letter frequencies are used to solve it.                     
homepage:            https://github.com/duncanguthrie/chording-kbd#readme
license:             BSD3
license-file:        LICENSE
author:              Duncan Guthrie
maintainer:          dguthrie@posteo.net
copyright:           Duncan Guthrie
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gold-bug
  hs-source-dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  other-modules:     System.Keyboard.Combinators
  build-depends:     base            >= 4.7  && < 5
                   , microlens       >= 0.4  && < 0.5
                   , microlens-th    >= 0.4  && < 0.5
                   , QuickCheck      >= 2.13 && < 2.14
                   , reactive-banana >= 1.2  && < 1.3
                   , sdl2            >= 2.5  && < 2.6
                   , sdl2-ttf        >= 2.1  && < 2.2
                   , vector          >= 0.12 && < 0.13

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   System.Keyboard.Combinators
  build-depends:     base            >= 4.7  && < 5
                   , microlens       >= 0.4  && < 0.5
                   , microlens-th    >= 0.4  && < 0.5
                   , sdl2            >= 2.5  && < 2.6
                   , vector          >= 0.12 && < 0.13
                     
test-suite gold-bug-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base              >= 4.7     && < 5
                   , gold-bug          >= 0.1.0.0 && < 0.2
                   , QuickCheck        >= 2.13.2  && < 2.14
  default-language:  Haskell2010